test/fails/func_undef.imp
fun  main(n)
vars a;
{       
		a = nosuchfunction(a);
        return a;
}